#5788: Shawburn: Fix Pullquote Block(full-Width): centered text on small screens (#6056)

--- a/shawburn/style.css
+++ b/shawburn/style.css
@@ -4471,6 +4471,11 @@ table th,
 	margin-right: calc( .1 * 24px);
 }
 
+/* center pullquote block when set to be full width */
+.wp-block-pullquote.alignfull blockquote {
+	margin: auto;
+}
+
 /**
  * Site Navigation Styles
  */
