--- a/shawburn/sass/_extra-child-theme.scss
+++ b/shawburn/sass/_extra-child-theme.scss
@@ -424,3 +424,8 @@ table,
 		margin-right: calc( .1 * #{map-deep-get($config-button, "padding", "horizontal")} );
 	}
 }
+
+/* center pullquote block when set to be full width */
+.wp-block-pullquote.alignfull blockquote {
+	margin: auto;
+}
