--- a/shawburn/style-rtl.css
+++ b/shawburn/style-rtl.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 /*
 Theme Name: Shawburn
-Theme URI: https://github.com/Automattic/themes/master/shawburn
+Theme URI: https://wordpress.com/theme/shawburn
 Author: Automattic
 Author URI: https://automattic.com/
 Description: Shawburn is the ideal choice for creating an online presence for your business.
 Requires at least: WordPress 4.9.6
-Version: 1.4.15
+Version: 1.4.17
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Template: varia
@@ -4440,6 +4440,11 @@ table th,
  */
 .wp-block-search .wp-block-search__input {
 	margin-left: calc( .1 * 24px);
+}
+
+/* center pullquote block when set to be full width */
+.wp-block-pullquote.alignfull blockquote {
+	margin: auto;
 }
 
 /**
